// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Separator block Save render should match snapshot 1`] = `
<div
  aria-hidden="true"
  class="ugb-separator ugb-separator--design-wave-1"
>
  <div
    class="ugb-inner-block"
  >
    <div
      class="ugb-block-content"
    >
      <div
        class="ugb-separator__top-pad"
      />
      <div
        class="ugb-separator__svg-wrapper"
      >
        <div
          class="ugb-separator__svg-inner ugb-separator-wrapper"
        >
          <svg
            aria-hidden="true"
            class="ugb-separator__layer-1"
            preserveAspectRatio="none"
          />
        </div>
      </div>
      <div
        class="ugb-separator__bottom-pad"
      />
    </div>
  </div>
</div>
`;

exports[`Separator block Save render should match snapshot with attributes 1`] = `
<div
  aria-hidden="true"
  class="ugb-separator ugb-separator--design-wave-2 ugb-separator--flip-vertical ugb-separator--flip-horizontal"
>
  <div
    class="ugb-inner-block"
  >
    <div
      class="ugb-block-content"
    >
      <div
        class="ugb-separator__top-pad"
      />
      <div
        class="ugb-separator__svg-wrapper"
      >
        <div
          class="ugb-separator__svg-inner ugb-separator-wrapper"
        >
          <svg
            aria-hidden="true"
            class="ugb-separator__shadow"
            preserveAspectRatio="none"
          />
          <svg
            aria-hidden="true"
            class="ugb-separator__layer-1"
            preserveAspectRatio="none"
          />
        </div>
      </div>
      <div
        class="ugb-separator__bottom-pad"
      />
    </div>
  </div>
</div>
`;
